# Credit-Card-Fraud-Detection-MLOps-Practices

./: .gitignore  LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
data/interim/: test.csv.dvc  train.csv.dvc
docs/: mkdocs.yml
docs/docs/: index.md
src/data/: make_dataset.py
src/features/: build_features.py
src/models/: train_model.py
src/visualization/: visualize.py
